k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fruits-app
spec:
  selector:
    app: fruits-app
  ports:
    - port: 8080
  type: NodePort
